Code simplification after Merge, Sync App.Config and Settings

--- a/CSharpToVB/App.config
+++ b/CSharpToVB/App.config
@@ -22,10 +22,22 @@
       <setting name="DefaultProjectDirectory" serializeAs="String">
         <value />
       </setting>
+      <setting name="EditorFontName" serializeAs="String">
+        <value>Consolas</value>
+      </setting>
       <setting name="Framework" serializeAs="String">
         <value>NETCOREAPP</value>
       </setting>
+      <setting name="IncludeTopLevelStmtProtoInCode" serializeAs="String">
+        <value>True</value>
+      </setting>
       <setting name="LastPath" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="LastProject" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="LastSolution" serializeAs="String">
         <value />
       </setting>
       <setting name="OptionCompare" serializeAs="String">
@@ -73,14 +85,14 @@
       <setting name="StartFolderConvertFromLastFile" serializeAs="String">
         <value>False</value>
       </setting>
-      <setting name="UpgradeRequired" serializeAs="String">
-        <value>True</value>
-      </setting>
-      <setting name="TSMatchCase" serializeAs="String">
+      <setting name="TSFindMatchCase" serializeAs="String">
         <value>False</value>
       </setting>
       <setting name="TSFindWhat" serializeAs="String">
         <value />
+      </setting>
+      <setting name="UpgradeRequired" serializeAs="String">
+        <value>True</value>
       </setting>
     </CSharpToVBApp.My.MySettings>
   </userSettings>
