Use ColorDescriptor Struct instead of Tuples to support colors, change some ColorNames to be more descriptive and more standard. Add support for eventually storing names with aRGB values. Enable WFP Media support. Updated and add more color tests.

--- a/CSharpToVB/CSharpToVB.vbproj
+++ b/CSharpToVB/CSharpToVB.vbproj
@@ -6,6 +6,7 @@
     <MyType>WindowsForms</MyType>
     <StartupObject>Sub Main</StartupObject>
     <UseWindowsForms>true</UseWindowsForms>
+    <UseWPF>true</UseWPF>
     <OptionCompare>Text</OptionCompare>
     <OptionExplicit>On</OptionExplicit>
     <OptionInfer>Off</OptionInfer>
