--- a/CSharpToVB/CSharpToVB.vbproj
+++ b/CSharpToVB/CSharpToVB.vbproj
@@ -6,6 +6,7 @@
     <MyType>WindowsForms</MyType>
     <StartupObject>Sub Main</StartupObject>
     <UseWindowsForms>true</UseWindowsForms>
+    <UseWPF>true</UseWPF>
     <OptionCompare>Text</OptionCompare>
     <OptionExplicit>On</OptionExplicit>
     <OptionInfer>Off</OptionInfer>
@@ -25,9 +26,9 @@
     <Product>CSharp To VB Converter</Product>
     <Copyright>Copyright (c) .NET Foundation and Contributors</Copyright>
     <PackageId>CSharp To VB Converter</PackageId>
-    <AssemblyVersion>5.0.1.2</AssemblyVersion>
-    <FileVersion>5.0.1.2</FileVersion>
-    <Version>5.0.1.2</Version>
+    <AssemblyVersion>5.0.1.3</AssemblyVersion>
+    <FileVersion>5.0.1.3</FileVersion>
+    <Version>5.0.1.3</Version>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
   </PropertyGroup>
