--- a/CodeConverter/CodeConverter.vbproj
+++ b/CodeConverter/CodeConverter.vbproj
@@ -5,7 +5,7 @@
     <TargetFramework>net5.0-windows7.0</TargetFramework>
     <OptionCompare>Text</OptionCompare>
     <OptionExplicit>On</OptionExplicit>
-    <OptionInfer>Off</OptionInfer>
+    <OptionInfer>On</OptionInfer>
     <OptionStrict>On</OptionStrict>
     <AssemblyName>VB.CodeConverter</AssemblyName>
   </PropertyGroup>
@@ -16,9 +16,9 @@
     <Product>VB Core Code Converter</Product>
     <RepositoryUrl>https://github.com/paul1956/CSharpToVB</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <AssemblyVersion>5.0.1.4</AssemblyVersion>
-    <FileVersion>5.0.1.4</FileVersion>
-    <Version>5.0.1.4</Version>
+    <AssemblyVersion>5.0.1.5</AssemblyVersion>
+    <FileVersion>5.0.1.5</FileVersion>
+    <Version>5.0.1.5</Version>
     <Copyright>Copyright (c) .NET Foundation and Contributors</Copyright>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
