Add way to support - Visual Studio 2019 Version 16.8.0 can  IF Assets Csv_LightModeColorDictionary.vb and Csv_DarkModeColorDictionary.vb are included in project

--- a/CSharpToVB/CSharpToVB.vbproj
+++ b/CSharpToVB/CSharpToVB.vbproj
@@ -41,6 +41,8 @@
     <WarningsAsErrors>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</WarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Assets\Csv_DarkModeColorDictionary.vb" />
+    <Compile Remove="Assets\Csv_LightModeColorDictionary.vb" />
     <Compile Remove="Extensions\RangeExtensions.vb" />
   </ItemGroup>
   <ItemGroup>
