--- a/ProgressReportLibrary/ProgressReportLibrary.vbproj
+++ b/ProgressReportLibrary/ProgressReportLibrary.vbproj
@@ -16,4 +16,11 @@
     <Product>Progress Report Library</Product>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic.CodeStyle" Version="3.8.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
