Clean up command line build

--- a/csvGenerator/csvGenerator.vbproj
+++ b/csvGenerator/csvGenerator.vbproj
@@ -4,7 +4,6 @@
     <RootNamespace>CVS_Generator</RootNamespace>
     <TargetFramework>netstandard2.0</TargetFramework>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
-    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <OptionStrict>On</OptionStrict>
     <OptionCompare>Text</OptionCompare>
@@ -23,7 +22,10 @@
     <Compile Include="..\CSharpToVB\ClassificationSupport\ClassificationNameStrings.vb" Link="ClassificationNameStrings.vb" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.2" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic" Version="3.9.0-3.final" PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic.CodeStyle" Version="3.8.0">
       <PrivateAssets>all</PrivateAssets>
