--- a/ProgressReportLibrary/ProgressReportLibrary.vbproj
+++ b/ProgressReportLibrary/ProgressReportLibrary.vbproj
@@ -12,11 +12,14 @@
     <Description>Class used to pass around progress information</Description>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
-    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
     <Product>Progress Report Library</Product>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic.CodeStyle" Version="3.8.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
