--- a/ProgressReportLibrary/ProgressReportLibrary.vbproj
+++ b/ProgressReportLibrary/ProgressReportLibrary.vbproj
@@ -13,6 +13,7 @@
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
     <Product>Progress Report Library</Product>
+    <UseDataCollector/>
   </PropertyGroup>
 
   <ItemGroup>
