--- a/.editorconfig
+++ b/.editorconfig
@@ -197,6 +197,9 @@ dotnet_naming_rule.locals_must_have_camel_case.style = camel_case_style
 # CA1031: Do not catch general exception types
 dotnet_diagnostic.ca1031.severity = silent
 
+# CA1050: Declare types in namespaces
+dotnet_diagnostic.CA1050.severity = none
+
 # CA1303: Do not pass literals as localized parameters
 dotnet_diagnostic.ca1303.severity = silent
 
