--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '5.0.200-preview.21079.7'
+        dotnet-version: '6.0.0'
     - name: Install dependencies
       run: dotnet restore
     - name: Build solution and run tests
