Use IsKind and update NuGet packages

--- a/CSharpToVB/App.config
+++ b/CSharpToVB/App.config
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System.Configuration.ConfigurationManager, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51">
-      <section name="CSharpToVBApp.My.MySettings" type="System.Configuration.ClientSettingsSection, System.Configuration.ConfigurationManager, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="CSharpToVBApp.My.MySettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <userSettings>
@@ -21,6 +21,9 @@
       </setting>
       <setting name="DefaultProjectDirectory" serializeAs="String">
         <value />
+      </setting>
+      <setting name="EditorFont" serializeAs="String">
+        <value>Consolas, 11.25pt</value>
       </setting>
       <setting name="EditorFontName" serializeAs="String">
         <value>Consolas</value>
@@ -51,9 +54,6 @@
       </setting>
       <setting name="OptionExplicitIncludeInCode" serializeAs="String">
         <value>True</value>
-      </setting>
-      <setting name="OptionInfer" serializeAs="String">
-        <value>Off</value>
       </setting>
       <setting name="OptionInferIncludeInCode" serializeAs="String">
         <value>True</value>
@@ -88,11 +88,20 @@
       <setting name="TSFindMatchCase" serializeAs="String">
         <value>False</value>
       </setting>
-      <setting name="TSFindWhat" serializeAs="String">
-        <value />
+      <setting name="TSFindMatchWholeWord" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="TSMatchCase" serializeAs="String">
+        <value>False</value>
       </setting>
       <setting name="UpgradeRequired" serializeAs="String">
         <value>True</value>
+      </setting>
+      <setting name="OptionInfer" serializeAs="String">
+        <value>Off</value>
+      </setting>
+      <setting name="TSFindWhat" serializeAs="String">
+        <value />
       </setting>
     </CSharpToVBApp.My.MySettings>
   </userSettings>
