--- a/CSharpToVB/My Project/Settings.settings
+++ b/CSharpToVB/My Project/Settings.settings
@@ -56,9 +56,6 @@
     <Setting Name="OptionExplicitIncludeInCode" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="OptionInfer" Type="System.String" Scope="User">
-      <Value Profile="(Default)">On</Value>
-    </Setting>
     <Setting Name="OptionInferIncludeInCode" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
@@ -103,6 +100,12 @@
     </Setting>
     <Setting Name="UpgradeRequired" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="OptionInfer" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Off</Value>
+    </Setting>
+    <Setting Name="TSFindWhat" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
